--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
 # On every push this script is executed
 name: Build and deploy GH Pages
 
-on: push
+on:
+  push:
+    branches:
+     - main
 
 jobs:
   build:
+    name: Publish site
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: build_and_deploy
-        uses: shalzz/zola-deploy-action@v0.14.1
+      - name: Checkout main
+        uses: actions/checkout@v4
+      - name: Build and deploy
+        uses: shalzz/zola-deploy-action@v0.20.0
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
